--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,23 +1,27 @@
 button {
     padding: 10px;
-    width: 50%;
+    width: 350px;
     border: 0;
     font-size: 60px;
     font-family: Roboto;
     background-color: rgba(255, 255, 0, 0);
     box-shadow: none;
-    border-radius: 50px;
+    border-radius: 20px;
     border: 2.5px solid #27ae60;
     color: #27ae60;
 }
 
-button:hover {
-    transition: ease-in-out 0.75s;
-    background-color: #27ae60;
-    color: #ecf0f1;
+.expanded-button {
+    width: 100%;
+    background-color: #1e2324;
 }
 
 .btn-logo {
     position: relative;
     top: 4px;
+    margin-left: 20px;
+}
+
+button:hover {
+    transition: ease-in-out 0.75s;
 }
