--- a/src/components/InfoToggler/InfoToggler.css
+++ b/src/components/InfoToggler/InfoToggler.css
@@ -1,8 +1,8 @@
 .info-card {
     display: flex;
     flex-direction: row;
-    margin-bottom: 5px;
-    border: 2px solid #2c3e50;
+    margin: 15px;
+    border: 2px solid #929292;
     border-radius: 20px;
 }
 
