--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -19,7 +19,7 @@
     width: 11px;
     height: 11px;
     border-radius: 50%;
-    background: #2c3e50;
+    background: #3c9a89;
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
     text-align: center;
 }
