--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,44 +1,57 @@
-@import url('https://fonts.googleapis.com/css?family=Comfortaa:400,700');
+@font-face {
+    font-family: 'Comfortaa';
+    src: url('../../fonts/comfortaa.ttf');
+    font-display: swap;
+}
 
 .navbar {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
     margin: 0;
     position: fixed;
     top: 0;
     left: 0;
     padding: 5px 9px;
-    background-color: #2c3e50;
+    color: #bed6e6;
+    background-color: #573c9a;
+    /* #9a3c3c,#2c3e50 */
+    box-shadow: -2.5px 2px 20px #000000;
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    box-shadow: -10px 2px 20px black;
+}
+
+.navbar a {
+    color: #bed6e6;
+}
+
+.navbar h1 {
+    color: #bed6e6;
 }
 
 .child-one {
-    position: relative;
-    top: 10px;
-    color: #bdc3c7;
-    width: 50%;
-    font-size: 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    font-size: 50px;
 }
 
 .center-brand {
-    font-size: 13px;
+    font-size: 14.5px;
     font-family: Comfortaa;
     font-weight: 700;
-    color: #bdc3c7;
+
+    justify-self: center;
 }
 
 .child-two {
-    position: relative;
-    top: 10px;
-    color: #bdc3c7;
-    width: 50%;
-    font-size: 40px;
-    margin-right: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    align-items: center;
+
+    font-size: 50px;
+    margin-right: 20px;
+    justify-self: end;
 }
 
 .child-two span {
