--- a/src/main.css
+++ b/src/main.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@font-face {
+    font-family: 'Roboto';
+    src: url('fonts/roboto.ttf');
+    font-display: swap;
+}
 
 body {
     margin: 0;
     margin-top: 110px;
-    background-color: #ecf0f1;
+    background-color: #1e2324;
 }
 
 a {
@@ -11,11 +15,82 @@ a {
 }
 
 a:hover {
-    font-size: 50px;
+    font-size: 60px;
     transition: ease-in-out;
-    transition-duration: 0.25s;
+    transition-duration: 0.35s;
+}
+
+h1 {
+    color: #929292;
 }
 
 *:focus {
     outline: none;
 }
+
+/* Animate CSS's used part start */
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@-webkit-keyframes shake {
+
+    from,
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -webkit-transform: translate3d(-10px, 0, 0);
+        transform: translate3d(-10px, 0, 0);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -webkit-transform: translate3d(10px, 0, 0);
+        transform: translate3d(10px, 0, 0);
+    }
+}
+
+@keyframes shake {
+
+    from,
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -webkit-transform: translate3d(-10px, 0, 0);
+        transform: translate3d(-10px, 0, 0);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -webkit-transform: translate3d(10px, 0, 0);
+        transform: translate3d(10px, 0, 0);
+    }
+}
+
+.shake {
+    -webkit-animation-name: shake;
+    animation-name: shake;
+}
+
+/* Animate CSS's used part end */
