--- a/src/pages/Selector/Selector.css
+++ b/src/pages/Selector/Selector.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: #ecf0f1;
+    background-color: #1e2324;
 }
 
 .selector-container h1 {
