--- a/src/components/AddBody/AddBody.css
+++ b/src/components/AddBody/AddBody.css
@@ -17,13 +17,13 @@
     flex-direction: column;
     align-items: center;
     font-family: Roboto;
-    font-size: 50px;
+    font-size: 7.5vw;
     text-align: center;
     width: 100%;
 }
 
 #input {
-    width: 80%;
+    width: 90vw;
     color: #929292;
     border-width: 2.5px;
     border-radius: 8px;
