Added all code update upto the react version update

--- a/src/components/InfoToggler/InfoToggler.css
+++ b/src/components/InfoToggler/InfoToggler.css
@@ -1,15 +1,24 @@
 .info-card {
-    display: flex;
-    flex-direction: row;
-    margin: 15px;
-    border: 2px solid #929292;
-    border-radius: 20px;
+  display: flex;
+
+  flex-direction: row;
+
+  border-radius: 20px;
+  background-color: #353638;
+  color: #f1eff3;
+  position: relative;
+  /* filter: blur(10.5px); */
 }
 
 .info-card img {
-    margin-right: 12px;
-    height: 100%;
-    width: 320px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+  margin-right: 12px;
+  height: auto;
+  width: 30%;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+.info-card h1 {
+  align-self: center;
+  font-size: 1.25em;
 }
