--- a/src/pages/Selector/Selector.css
+++ b/src/pages/Selector/Selector.css
@@ -1,28 +1,11 @@
 .selector-container {
   margin-bottom: 120px;
 }
-/*
-.selector-next-btn {
-    position: fixed;
-    bottom: 0px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    background-color: #1e2324;
-}
 
-.selector-container h1 {
-    font-family: Roboto;
-    font-size: 45px;
+.selector-title {
+  text-align: center;
+  font-size: 1.5em;
 }
-
-.header-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-*/
 .selector-load-more-btn {
   width: 100%;
 }
@@ -36,4 +19,24 @@
   left: 0;
   bottom: 0;
   width: 100%;
+}
+
+.info-toggler-wrapper {
+  position: relative;
+  margin: 4.5vh 0 4.5vh 0;
+}
+
+#hover-selected {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#hover-selected h1 {
+  color: #28d8b5;
 }
