--- a/src/components/AddBody/AddBody.css
+++ b/src/components/AddBody/AddBody.css
@@ -1,39 +1,75 @@
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 6.5vw;
+  width: 100%;
+}
+
+.wrapper h1 {
+  margin: 0 0 20px 0;
+}
+
 #input-msg-container {
-    display: none;
-    flex-direction: row;
-    justify-content: center;
-    padding: 5px;
-    width: 75%;
+  display: none;
+  flex-direction: row;
+  justify-content: center;
+  padding: 5px;
+  width: 75%;
 }
 
 #input-msg {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #ff3c3c;
+  font-size: 2.2rem;
+  font-weight: bold;
+  color: #d53e3e;
 }
 
-.wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: Roboto;
-    font-size: 7.5vw;
-    text-align: center;
-    width: 100%;
+#input[type='text'] {
+  width: 90vw;
+  color: #e5e5e5;
+  border: 2.5px solid #2a8ed5;
+  border-radius: 8px;
+
+  background-color: #1b1e21;
+  font-size: 0.75em;
+  text-align: center;
 }
 
-#input {
-    width: 90vw;
-    color: #929292;
-    border-width: 2.5px;
-    border-radius: 8px;
-    border-color: #84cdfd;
-    background-color: inherit;
-    font-size: 40px;
-    text-align: center;
+#input[type='text']:hover {
+  transition: ease-in-out 0.25s;
+  background-color: #2a8ed51f;
 }
 
-#input:hover {
-    transition: ease-in-out 0.75s;
-    width: 82.5%;
+#input[type='text']:focus {
+  transition: ease-in-out 0.25s;
+  border-color: #2a8ed5 !important;
+  -webkit-box-shadow: 0px 0px 40px -18px #2a8ed5 !important;
+  -moz-box-shadow: 0px 0px 40px -18px #2a8ed5 !important;
+  box-shadow: 0px 0px 40px -18px #2a8ed5 !important;
+}
+
+.instruction-container {
+  background-color: #353638;
+  border-radius: 20px;
+  width: calc(100% - 2 * 20px);
+  padding: 20px;
+  margin-bottom: 2vh;
+  line-height: 1em;
+}
+
+.instruction-container h5 {
+  margin: 0;
+  color: #aba6a6;
+}
+
+.instruction-container p {
+  font-size: 0.5em;
+}
+
+.mini-title {
+  color: #a990ff;
+}
+
+.point-number {
+  color: #ff304f;
 }
