--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,27 +1,27 @@
 button {
-    padding: 10px;
-    width: 95vw;
-    border: 0;
-    font-size: 60px;
-    font-family: Roboto;
-    background-color: rgba(255, 255, 0, 0);
-    box-shadow: none;
-    border-radius: 20px;
-    border: 2.5px solid #27ae60;
-    color: #27ae60;
+  padding: 10px;
+  width: 95vw;
+  border: 0;
+  font-size: 1.1em;
+  font-family: Roboto;
+  background-color: #ff304f;
+  box-shadow: none;
+  border-radius: 20px;
+  border: none;
+  color: #e5e5e5;
 }
 
 .expanded-button {
-    width: 100%;
-    background-color: #1e2324;
+  width: 100%;
 }
 
 .btn-logo {
-    position: relative;
-    top: 4px;
-    margin-left: 20px;
+  position: relative;
+  top: 4px;
+  margin-left: 20px;
+  color: inherit !important;
 }
 
 button:hover {
-    transition: ease-in-out 0.75s;
+  background-color: #b92c41;
 }
