--- a/src/components/ErrorMessage/ErrorMessage.css
+++ b/src/components/ErrorMessage/ErrorMessage.css
@@ -1,5 +1,10 @@
 .error {
-    font-family: Roboto;
-    font-size: 2em;
-    text-align: center;
+  text-align: center;
+}
+
+.error div {
+  margin: 30px 0 30px 0;
+  background: #353638;
+  line-height: 25px;
+  padding: 20px;
 }
