--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,61 +1,136 @@
-@font-face {
-    font-family: 'Comfortaa';
-    src: url('../../fonts/comfortaa.ttf');
-    font-display: swap;
-}
-
 .navbar {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 9.5vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    color: #bed6e6;
-    background-color: #573c9a;
-    /* #9a3c3c,#2c3e50 */
-    box-shadow: -2.5px 2px 20px #000000;
-    width: 100vw;
-}
-
-.navbar a {
-    color: #bed6e6;
-}
-
-.navbar h1 {
-    color: #bed6e6;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: #f1eff3;
+  background-color: #775ada;
+  /* #9a3c3c,#2c3e50 */
+  box-shadow: -2.5px 2px 20px #000000;
+  width: 100vw;
 }
 
 .child-one {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-left: 5px;
-    font-size: 8.25vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 1.75vw;
+  font-size: 8.25vw;
+}
+
+.center-brand h1 {
+  font-family: Comfortaa;
+}
+.child-one a svg {
+  color: #f1eff3;
+}
+
+.child-one a svg:hover {
+  color: #bdbaba;
 }
 
 .center-brand {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-size: 3.35vw;
-    font-family: Comfortaa;
-    font-weight: 700;
-    margin-left: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 2.5vw;
+  font-family: Comfortaa;
+  font-weight: 700;
+  margin-left: 1.75vw;
 }
 
 .child-two {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-self: end;
 
-    font-size: 10.15vw;
-    margin-right: 5px;
-    justify-self: end;
+  height: 100%;
+  font-size: 10.15vw;
+  margin-right: 1.75vw;
 }
 
 .child-two span {
-    margin-left: 3.75vw;
+  margin-left: 3.75vw;
+}
+
+.child-two span a svg {
+  color: #f1eff3;
+}
+
+.child-two span a svg:hover {
+  color: #bdbaba;
+}
+
+@media (min-width: 426px) {
+  .navbar {
+    height: 13.5vh;
+  }
+  .child-two {
+    font-size: 6.5vw;
+    height: 13.5vh;
+  }
+  .child-one {
+    font-size: 6.25vw;
+    height: 13.5vh;
+  }
+  .center-brand {
+    height: 13.5vh;
+  }
+}
+
+@media (min-width: 1439px) {
+  .navbar {
+    height: 20.5vh;
+  }
+  .child-two {
+    font-size: 6.5vw;
+    height: 20.5vh;
+  }
+  .child-one {
+    font-size: 6.25vw;
+    height: 20.5vh;
+  }
+  .center-brand {
+    height: 20.5vh;
+  }
+}
+
+@media (min-width: 1639px) {
+  .navbar {
+    height: 10vh;
+  }
+  .child-two {
+    font-size: 3.5vw;
+    height: 10vh;
+  }
+  .child-one {
+    font-size: 3.5vw;
+    height: 10vh;
+  }
+  .center-brand {
+    height: 10vh;
+    font-size: 1.3vw;
+  }
+}
+@media (min-width: 2560px) {
+  .navbar {
+    height: 25vh;
+  }
+  .child-two {
+    font-size: 3.25vw;
+    height: 25vh;
+  }
+  .child-one {
+    font-size: 3.25vw;
+    height: 25vh;
+  }
+  .center-brand {
+    height: 25vh;
+    font-size: 1.3vw;
+  }
 }
