--- a/src/main.css
+++ b/src/main.css
@@ -1,96 +1,63 @@
 @font-face {
-    font-family: 'Roboto';
-    src: url('fonts/roboto.ttf');
-    font-display: swap;
+  font-family: 'Roboto';
+  src: url('fonts/roboto.ttf');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Comfortaa';
+  src: url('./fonts/comfortaa.ttf');
+  font-display: swap;
 }
 
 body {
-    margin: 0;
-    margin-top: 110px;
-    background-color: #1e2324;
+  margin: 0;
+  margin-top: 19vh;
+  background-color: #272a2d;
+  font-family: Roboto;
+}
+
+.main-body {
+  margin: 15vh 3vw 0 3vw;
+}
+
+.unselectable {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+span {
+  color: #ff304f !important;
 }
 
 a {
-    color: #bdc3c7;
+  text-decoration: none;
 }
 
-a:hover {
-    font-size: 60px;
-    transition: ease-in-out;
-    transition-duration: 0.35s;
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+span {
+  margin: 0;
+  color: #f1eff3;
+  font-family: Roboto;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-h1 {
-    color: #929292;
+em {
+  color: #f9a825 !important;
 }
 
 *:focus {
-    outline: none;
+  outline: none;
 }
 
-/* Animate CSS's used part start */
-.animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-}
-
-@-webkit-keyframes shake {
-
-    from,
-    to {
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-
-    10%,
-    30%,
-    50%,
-    70%,
-    90% {
-        -webkit-transform: translate3d(-10px, 0, 0);
-        transform: translate3d(-10px, 0, 0);
-    }
-
-    20%,
-    40%,
-    60%,
-    80% {
-        -webkit-transform: translate3d(10px, 0, 0);
-        transform: translate3d(10px, 0, 0);
-    }
-}
-
-@keyframes shake {
-
-    from,
-    to {
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-
-    10%,
-    30%,
-    50%,
-    70%,
-    90% {
-        -webkit-transform: translate3d(-10px, 0, 0);
-        transform: translate3d(-10px, 0, 0);
-    }
-
-    20%,
-    40%,
-    60%,
-    80% {
-        -webkit-transform: translate3d(10px, 0, 0);
-        transform: translate3d(10px, 0, 0);
-    }
-}
-
-.shake {
-    -webkit-animation-name: shake;
-    animation-name: shake;
-}
-
-/* Animate CSS's used part end */
+/* Styling for App.tsx starts from here */
